@@ -1,5 +1,12 @@
 2008-12-11  Neal H. Walfield  <neal@gnu.org>
 
+	* ia32-cmain.c: Include <hurd/storage.h>.
+	(finish): If the thread is not using the initial stack, free it.
+	(_pthread_init_routine): Add the weak attribute to the
+	declaration.
+
+2008-12-11  Neal H. Walfield  <neal@gnu.org>
+
 	* backtrace.h: New file.
 
 2008-12-11  Neal H. Walfield  <neal@gnu.org>
